// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches snapshot with default props 1`] = `
<View
  className="rounded-lg p-4 bg-white"
>
  <Text>
    Default card
  </Text>
</View>
`;

exports[`Card matches snapshot with elevated variant 1`] = `
<View
  className="rounded-lg p-4 bg-white shadow-md"
>
  <Text>
    Elevated card
  </Text>
</View>
`;

exports[`Card matches snapshot with outlined variant 1`] = `
<View
  className="rounded-lg p-4 bg-white border border-gray-200"
>
  <Text>
    Outlined card
  </Text>
</View>
`;
